--- a/client/bill.css
+++ b/client/bill.css
@@ -56,6 +56,12 @@
 	overflow: hidden;
 }
 
+.participant-clickable:hover {
+	cursor: pointer;
+	font-weight: bold;
+	/*color: #666666;*/
+}
+
 .participant-icon {
 	display: block;
 	padding: 0;
