--- a/client/homepage.css
+++ b/client/homepage.css
@@ -1,12 +1,3 @@
 #createBillButton {
-	display: inline-block;
-	font-size: 24px;
-	padding: 14px;
-	background-color: blue;
-	color: white;
-	/*text-transform: uppercase;*/
-	cursor: pointer;
-	border: none;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	width: 300px;
 }
